<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Author: M. Rzucidlo
  ~ Created as part of the Google - Udacity scholarship (Android Developer Nanodegree program).
  ~ Project 4: Baking App.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified: 8/6/18 8:07 PM
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/steps_fragment"
    tools:context=".ui.recipesteps.StepsFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/step_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/recipe_name"
        android:scaleType="fitXY"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/recipe_step_long_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_step_long_description"
        android:padding="@dimen/card_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_previous" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_next" />
    </LinearLayout>
</LinearLayout>
