<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Author: M. Rzucidlo
  ~ Created as part of the Google - Udacity scholarship (Android Developer Nanodegree program).
  ~ Project 4: Baking App.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified: 8/3/18 7:10 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.recipelist.CardsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>