...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_ingredients"
                android:padding="@dimen/card_padding"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/steps_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_spacing_small"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
